--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+fastapi = "^0.104.0"
+uvicorn = "^0.23.2"
+httpx = "^0.25.0"
+environs = "^9.5.0"
+websockets = "^11.0.3"
 
 
 [build-system]
